Search: Fix thumbnail stretching, better

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -28,6 +28,7 @@ $item-thumbnail-size: 90px
 	background-color: $color-background
 	border-top-left-radius: 3px
 	border-bottom-left-radius: 3px
+	color: $color-text-hint
 
 	&.has-thumbnail
 		background-color: transparent
@@ -37,10 +38,11 @@ $item-thumbnail-size: 90px
 		max-height: initial
 		margin: 0
 
-		img
+		.item-thumbnail-picture
 			width: 100%
 
-	img
+
+	.item-thumbnail-picture
 		position: absolute
 		width: 100%
 		height: $item-thumbnail-size
@@ -48,6 +50,13 @@ $item-thumbnail-size: 90px
 		border-radius: 50%
 		box-shadow: 2px 2px 0 rgba(black, .1)
 		background-color: $color-background
+		overflow: hidden
+		display: flex
+		justify-content: center
+
+		img
+			height: $item-thumbnail-size
+
 
 .item-content
 	display: flex
